--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+  overscroll-behavior: contain;
+}
+html.dark {
+  scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+}
+
+html ::-webkit-scrollbar,
+html ::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+html :hover::-webkit-scrollbar-thumb,
+html :focus::-webkit-scrollbar-thumb,
+html :focus-within::-webkit-scrollbar-thumb,
+html :active::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border: 4px solid transparent;
+  background-clip: content-box;
+  border-radius: 10px;
+}
+html ::-webkit-scrollbar-thumb:hover,
+html ::-webkit-scrollbar-thumb:active {
+  background-color: rgba(0, 0, 0, 0.35) !important;
+}
+
+html.dark :hover::-webkit-scrollbar-thumb,
+html.dark :focus::-webkit-scrollbar-thumb,
+html.dark :focus-within::-webkit-scrollbar-thumb,
+html.dark :active::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+html.dark ::-webkit-scrollbar-thumb:hover,
+html.dark ::-webkit-scrollbar-thumb:active {
+  background-color: rgba(255, 255, 255, 0.35) !important;
+}
