--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 html {
   scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
   overscroll-behavior: contain;
+  scroll-behavior: smooth;
 }
 html.dark {
   scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
